Add number of entries to o++

--- a/entries/projects/magicandmachine/42mythicalbeasts.html
+++ b/entries/projects/magicandmachine/42mythicalbeasts.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>and in the years to come what mythical beasts will have emerged through our networks, squeezing through pores, collecting like chunks of paneer in tea towels hung from disused shower rails?</p>
+        <p>and in the years to come what mythical beasts will have emerged through our networks, squeezing through pores, collecting like chunks of paneer in tea towels hung from shower rails?</p>
     </div>
     <div class="leave">
         <p>
