--- a/entries/projects/magicandmachine/83form.html
+++ b/entries/projects/magicandmachine/83form.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++#
+    <title>o++83
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p></p>
+        <p>She woke in the middle of the night and realised, with a confidence that lends itself to motivational slogans in huge, grim, forgettable fonts:</p>
+        <p>&nbsp&nbsp&nbsp&nbsp&nbspFORM* IS A METHOD OF FIXING** ETERNITY</p>
+        <p>* could insert 'pattern' here<br>
+        ** could insert 'establishing' or 'extending'</p>
+        <p>When she woke to write it all down she ended up crossing through the words again and again, because she liked the way the lines looked as well as the early feel of a newly formed phrase.</p>
     </div>
     <div class="leave">
         <p>
