--- a/entries/projects/magicandmachine/84moonfinding.html
+++ b/entries/projects/magicandmachine/84moonfinding.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++#
+    <title>o++84
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p></p>
+        <p>There was great excitement about finding water on the moon, frozen outside the reach of the sun. One scientist explained that, if water was there, it would be in 'incredibly cold and incredibly dark places', eradicating any real chance of life. Still, we held our breath.</p>
+        <p>When they prized open the moon's crust they found only small pockets of metal and the sound of popcorn popping. Back on earth's surface, these new findings were added to the grid in a matter of nanoseconds.</p>
     </div>
     <div class="leave">
         <p>
