--- a/entries/projects/magicandmachine/87noveldesign.html
+++ b/entries/projects/magicandmachine/87noveldesign.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++#
+    <title>o++87
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p></p>
+        <p>'I lost two characters to starvation just mapping the damn thing'
+            <br><br>
+            &nbsp&nbsp&nbsp&nbsp&nbsp- a friend trying to design a novel
+        </p>
     </div>
     <div class="leave">
         <p>
