--- a/entries/projects/magicandmachine/88onscreen.html
+++ b/entries/projects/magicandmachine/88onscreen.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++#
+    <title>o++88
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p></p>
+        <p>We can no longer influence anything that does not, in some way, take place on-screen.</p>
     </div>
     <div class="leave">
         <p>
