--- a/entries/projects/magicandmachine/89childrensgame.html
+++ b/entries/projects/magicandmachine/89childrensgame.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++#
+    <title>o++89
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p></p>
+        <p>'it is no ordinary game these children play...<br>
+            [ something about ] profane... [ something about ] a witches' sabbath...'
+            </p>
+    <p>&nbsp&nbsp&nbsp&nbsp&nbsp - overheard in the opening crackle / cackle of an NTS radio show</p> 
     </div>
     <div class="leave">
         <p>
