--- a/entries/projects/magicandmachine/81storyends.html
+++ b/entries/projects/magicandmachine/81storyends.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++#
+    <title>o++81
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p></p>
+        <p>when electricity ends</p>
+        <p>when paper ends</p>
+        <p>that's when the story really ends</p>
+        <p>that's when time really ends</p>
     </div>
     <div class="leave">
         <p>
