--- a/entries/projects/magicandmachine/82choirs.html
+++ b/entries/projects/magicandmachine/82choirs.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++#
+    <title>o++82
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p></p>
+        <p>wrong notes at the perfect time</p>
+        <p>always singing</p>
+        <p>choirs are a noisy game</p>
     </div>
     <div class="leave">
         <p>
