--- a/entries/projects/magicandmachine/85lockedroom.html
+++ b/entries/projects/magicandmachine/85lockedroom.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++#
+    <title>o++85
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p></p>
+        <p>Freedom might be overrated. I would allow myself to be locked inside a room if I thought it would allow me to see other worlds.</p>
     </div>
     <div class="leave">
         <p>
