--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/soberattention290823.html">soberattention290823</a>
             <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
+            <br><a href="./entries/syntheticsun061123.html">syntheticsun061123</a>
             <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
             <br><a href="./entries/taylorsmistake020723.html">taylorsmistake020723</a>
             <br><a href="./entries/treeavalanche250223.html">treeavalanche250223</a>
