--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/glassghostscosmictrips211023.html">glassghostscosmictrips211023</a>
             <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
+            <br><a href="./entries/meaningmystery131123.html">meaningmystery131123</a>
             <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
