Add flood world and password babble

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
             <br><a href="./entries/onlinechess140923.html">onlinechess140923</a>
+            <br><a href="./entries/passwordbabble311023.html">passwordbabble311023</a>
             <br><a href="./entries/plasma240623.html">plasma240623</a>
             <br><a href="./entries/pocked170123.html">pocked170123</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
@@ -86,6 +87,7 @@
             <br><a href="./entries/opticverve/fallwater120523.html">fallwater120523</a>
             <br><a href="./entries/opticverve/femur291122.html">femur291122</a>
             <br><a href="./entries/opticverve/flightdecks250622.html">flightdecks250622</a>
+            <br><a href="./entries/opticverve/floodworldsandfieldwork211123.html">floodworldsandfieldwork211123</a>
             <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
             <br><a href="./entries/opticverve/pacificdrapes121022.html">pacificdrapes121022</a>
