--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         collaberrations
     </div>
 
-    <a href="./entries/collaberrations/guldies.html">guldies</a>
+    <a href="./entries/collaberrations/blackhaine.html">blackhaine</a>
+    <br><a href="./entries/collaberrations/guldies.html">guldies</a>
     <br><a href="./entries/collaberrations/springlambs.html">spring lambs</a>
 
     
