--- a/entries/projects/magicandmachineindex.html
+++ b/entries/projects/magicandmachineindex.html
@@ -106,6 +106,12 @@
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/93invisible.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/94enlightenment.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/95cgi.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/96statues.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/97eternal.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/98undead.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/99wires.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/100hermeticseal.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/101witchwarg.html">+</a>
         </p>
     </div>
     <div class="leave">
