--- a/entries/projects/magicandmachine/38piston.html
+++ b/entries/projects/magicandmachine/38piston.html
@@ -18,7 +18,7 @@
             <br>
             birdsong collapses / revives<br>
             <br> 
-            an actual lever is pulled like a 1950's croon<br>
+            an actual lever is pulled like a 1950s croon<br>
             <br>
             black and white silent films become popular once again<br>
             <br>
