--- a/entries/projects/magicandmachineindex.html
+++ b/entries/projects/magicandmachineindex.html
@@ -9,7 +9,7 @@
     <title>o++</title>
 </head>
 <body>
-    <div class="mainlinksection">
+    <div class="mainlinksectioncentred">
         <p>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/1computergeneration.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/2colossalcave.html">+</a>
@@ -122,12 +122,22 @@
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/109imaginarydevils.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/110losingfamily.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/111planes.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/112violentmushroom.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/113dice.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/114questions.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/115geometriccaves.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/116adults.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/117wave.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/118endings.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/119chapters.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/120pretending.html">o</a>
+
         </p>
     </div>
-    <div class="leave">
-        <p>
-            <a href="../../index.html">x</a>
-        </p>
-    </div>
+    <div class="leave"> 
+            <p><a href="../../index.html">x</a>
+            </p> 
+            </div>
+    
 </body>
 </html>
