--- a/entries/projects/magicandmachine/5dungeonkeeper.html
+++ b/entries/projects/magicandmachine/5dungeonkeeper.html
@@ -18,7 +18,7 @@
     </div>
     <div class="leave">
         <p>
-            <a href="../magicandmachineindex.html">x</a>
+            <a href="../magicandmachinetxt.html">x</a>
         </p>
     </div>
 </body>
