--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <br><a href="./entries/glassghostscosmictrips211023.html">glassghostscosmictrips211023</a>
             <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
             <br><a href="./entries/meaningmystery131123.html">meaningmystery131123</a>
+            <br><a href="./entries/millenniumbug291123.html">millenniumbug291123</a>
             <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
@@ -46,6 +47,7 @@
             <br><a href="./entries/pocked170123.html">pocked170123</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
+            <br><a href="./entries/rainkill051223.html">rainkill051223</a>
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
