--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
             <br><a href="./entries/rainkill051223.html">rainkill051223</a>
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
+            <br><a href="./entries/ritualplay181223.html">ritualplay181223</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
@@ -63,6 +64,7 @@
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
             <br><a href="./entries/waitingnotingtime180923.html">waitingnotingtime180923</a>
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a> 
+            <br><a href="./entries/wheelingwatchingbirds181223.html">wheelingwatchingbirds181223</a>
             <br><a href="./entries/windwarp180323.html">windwarp180323</a>
             <br><a href="./entries/yachts070722.html">yachts070722</a>
         </p>
