Add concrete ritual

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <a href="./entries/opticverve/aliencraft160223.html">aliencraft160223</a>
             <br><a href="./entries/opticverve/beached161222.html">beached161222</a>
             <br><a href="./entries/opticverve/celestiac100622.html">celestiac100622</a>
+            <br><a href="./entries/opticverve/concretehanginghedgeritual211223.html">concretehanginghedgeritual211223</a>
             <br><a href="./entries/opticverve/coves161022.html">coves161022</a>
             <br><a href="./entries/opticverve/dequantization030823.html">dequantization030823</a>
             <br><a href="./entries/opticverve/fallwater120523.html">fallwater120523</a>
