--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/glassghostscosmictrips211023.html">glassghostscosmictrips211023</a>
+            <br><a href="./entries/grainwave050124.html">grainwave050124</a>
             <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
             <br><a href="./entries/meaningmystery131123.html">meaningmystery131123</a>
             <br><a href="./entries/millenniumbug291123.html">millenniumbug291123</a>
