--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/horsebones.jpg" alt="a rock formation looking like the bones of a horse" id="horsebonespic"><p>horse bones</p></div>
 
+        <div class="imgcontainershortlandscape"><img src="./resources/images/dovedive.jpg" alt="diving doves next to medieval walls" id="dovedivepic"><p>unidentified falling dovejet</p></div>
+
         
     </div>
 
