Add mould lines

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <br><a href="./entries/meaningmystery131123.html">meaningmystery131123</a>
             <br><a href="./entries/millenniumbug291123.html">millenniumbug291123</a>
             <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
+            <br><a href="./entries/mouldlines160124.html">mouldlines160124</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
             <br><a href="./entries/onlinechess140923.html">onlinechess140923</a>
