Add silent sailing and gladeframe

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/gladeframe300124.html">gladeframe300124</a>
             <br><a href="./entries/glassghostscosmictrips211023.html">glassghostscosmictrips211023</a>
             <br><a href="./entries/grainwave050124.html">grainwave050124</a>
             <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
@@ -54,6 +55,7 @@
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
             <br><a href="./entries/ritualplay181223.html">ritualplay181223</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
+            <br><a href="./entries/silentsailing290124.html">silentsailing290124</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/soberattention290823.html">soberattention290823</a>
