Edit margins, add sweepserver, images and samsara

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -86,6 +86,8 @@
     how colours work<br>
     horse bones<br>
     unidentified falling dovejet<br>
+    wandering the spinney<br>
+    lifting the beach<br>
 
 
     
