--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/indexstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
     <title>dreamdocks and static</title>
 </head>
@@ -60,6 +60,7 @@
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/soberattention290823.html">soberattention290823</a>
             <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
+            <br><a href="./entries/sweepserver200224.html">sweepserver200224</a>
             <br><a href="./entries/syntheticsun061123.html">syntheticsun061123</a>
             <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
             <br><a href="./entries/taylorsmistake020723.html">taylorsmistake020723</a>
@@ -115,6 +116,7 @@
     <a href="./entries/collaberrations/blackhaine.html">blackhaine</a>
     <br><a href="./entries/collaberrations/guldies.html">guldies</a>
     <br><a href="./entries/collaberrations/springlambs.html">spring lambs</a>
+    <br><a href="./entries/collaberrations/samsara.html">samsara</a>
 
     
     <div class="arcadetitle">
@@ -271,6 +273,10 @@
         <div class="imgcontainerhigher"><img src="./resources/images/horsebones.jpg" alt="a rock formation looking like the bones of a horse" id="horsebonespic"><p>horse bones</p></div>
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/dovedive.jpg" alt="diving doves next to medieval walls" id="dovedivepic"><p>unidentified falling dovejet</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/spinneybug.jpg" alt="a ladybug wanders through the cavernous earth of the spinney" id="spinneybugpic"><p>wandering the spinney</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/beachlifting.jpg" alt="a sandy beach with no pebbles in sight" id="beachliftingpic"><p>lifting the beach</p></div>
 
         
     </div>
