Add potomac and sentimental deer

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
     <br><a href="./entries/collaberrations/guldies.html">guldies</a>
     <br><a href="./entries/collaberrations/springlambs.html">spring lambs</a>
     <br><a href="./entries/collaberrations/samsara.html">samsara</a>
+    <br><a href="./entries/collaberrations/sentimentaldeer.html">sentimental deer</a>
+    <br><a href="./entries/collaberrations/potomac.html">potomac</a>
+
 
     
     <div class="arcadetitle">
