--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <br><a href="./entries/opticverve/floodworldsandfieldwork211123.html">floodworldsandfieldwork211123</a>
             <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
+            <br><a href="./entries/opticverve/onfrozenshores290224.html">onfrozenshores290224</a>
             <br><a href="./entries/opticverve/pacificdrapes121022.html">pacificdrapes121022</a>
             <br><a href="./entries/opticverve/swallowingsnow070723.html">swallowingsnow070723</a>
             <br><a href="./entries/opticverve/unfamiliarpark020922.html">unfamiliarpark020922</a>
