Add industrial and few pics

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -88,6 +88,8 @@
     unidentified falling dovejet<br>
     wandering the spinney<br>
     lifting the beach<br>
+    raptor<br>
+    our front range under winter's end<br>
 
 
     
