--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <br><a href="./entries/drawnbyhand131223.html">drawnbyhand131223</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
+            <br><a href="./entries/efficientindustrialinstinct040324.html">efficientindustrialinstinct040324</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/gladeframe300124.html">gladeframe300124</a>
             <br><a href="./entries/glassghostscosmictrips211023.html">glassghostscosmictrips211023</a>
@@ -282,7 +283,10 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/beachlifting.jpg" alt="a sandy beach with no pebbles in sight" id="beachliftingpic"><p>lifting the beach</p></div>
 
-        
+        <div class="imgcontainerportrait"><img src="./resources/images/hawk.jpg" alt="hawk in a blurred tree" id="hawkpic"><p>raptor</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/frontrange.jpg" alt="the front range of Colorado" id="frontrangepic"><p>our front range under winter's end</p></div>
+
     </div>
 
 </body>
