--- a/entries/amazonia140522.html
+++ b/entries/amazonia140522.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../resources/css/entrystyle.css">
+    <link rel="stylesheet" href="../resources/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
     <title>amazonia140522</title>
 </head>
