Edit deer and potomac

--- a/entries/collaberrations/sentimentaldeer.html
+++ b/entries/collaberrations/sentimentaldeer.html
@@ -31,16 +31,16 @@
     
     <div class="mainentry">
         <p>
-            We know one comes 'from life', but that doesn't seem to mean much, and isn't that true for both of them? 
+            We know one comes 'from life', but that doesn't seem to mean much. Isn't that true for both of them? 
         </p>
         <p>
             The unfocused leaves, partially obscuring the shot, help make the photo more 'real', I think. The fact that the deer are in motion also points towards a real complication in life. All things, living or otherwise, are always moving, getting in the way of one another, escaping the lens.
         </p>
         <p>
-            I ask myself how I might alter the painted if I was asked to make it less sentimental. If there has to be more than one deer, I'd make it so they're not so brazenly a happy family. We should question how they're related, whether they always travel together. I think about having one deer lying down at an angle that makes us question whether it's alive, or if there's something wrong with it. Is it resting, or unwell?
+            I ask myself how I might alter the painting if I was asked to make it less sentimental. If there has to be more than one deer, I'd make it so they're not such a brazenly happy family. We should question how they're related, whether they always travel together. I think about having one deer lying down at an angle that makes us question whether it's alive, or if there's something wrong with it. Is it resting, or unwell?
         </p>
         <p>
-            All strikes against the sentimental seem to involve darkening the scene, hinting that something could be amiss. Could we complicate things further - smudge a few grey clouds into the sky; give the trees the first touches of an encroaching blight; introduce a few unfocused leaves into the foreground, helping to blur our view? 
+            All strikes against the sentimental seem to involve darkening the scene, hinting that something could be amiss. Could we complicate things further - smudge a few grey clouds into the sky; give the trees the first touches of an encroaching blight; introduce a few unfocused leaves into the foreground, helping to spoil our view? 
         </p>
         <p>
             What happens if we remove the deer entirely, from the painting and then from the photograph? What, then, would these pieces be 'about'? The photo would, I suspect, feel markedly strange; a partially obscured shot of a seemingly empty glade. The subject would be unclear. We might ask ourselves what the photographer was trying to capture, and might they have arrived at that moment a moment too late? Whatever they wanted to fix in time, is it now somewhere just outside the frame? Was it a breathing, living thing, constantly on the move? 
