Add snow scabs to index

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <br><a href="./entries/silentsailing290124.html">silentsailing290124</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
+            <br><a href="./entries/snowscabs250324.html">snowscabs250324</a>
             <br><a href="./entries/soberattention290823.html">soberattention290823</a>
             <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
             <br><a href="./entries/sweepserver200224.html">sweepserver200224</a>
