--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <br><a href="./entries/gladeframe300124.html">gladeframe300124</a>
             <br><a href="./entries/glassghostscosmictrips211023.html">glassghostscosmictrips211023</a>
             <br><a href="./entries/grainwave050124.html">grainwave050124</a>
+            <br><a href="./entries/hailcast010424.html">hailcast010424</a>
             <br><a href="./entries/hawkingdrive220723.html">hawkingdrive220723</a>
             <br><a href="./entries/meaningmystery131123.html">meaningmystery131123</a>
             <br><a href="./entries/millenniumbug291123.html">millenniumbug291123</a>
