--- a/entries/hailcast010424.html
+++ b/entries/hailcast010424.html
@@ -32,7 +32,7 @@
         
         <p>In the breaks between hail I do other things, incapable, as always, of doing nothing. But when the dog and I are once again ready to go out, the weather turns and turns. Rain then hail then rain. A brief clearing. Then more of the same. A cycle that keeps all living things indoors or under shelter, and God forbid you have nowhere to go.</p>
 
-        <p>On the podcast, they rarely interrupt each other. I wonder if they have hand signals to show when they're done talking, to let the other begin. Do they pass the conch? When life takes place outside a recording studio, everyone speaks at once. It's never ending. One voice flows into the next, swallows its neighbour. Countless voices hammering down. One might say the work is never done.</p>
+        <p>On the podcast, they rarely interrupt each other. I wonder if they have hand signals to show when they're done talking, to let the other begin. Do they pass the conch? When life takes place outside a recording studio, everyone speaks at once. It's never ending. One mouth flows into the next, swallows its neighbour. Countless voices hammering down. One might say the work is never done.</p>
     </div>
 
     <div class="dateentry">
