add woodpecker window

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a> 
             <br><a href="./entries/wheelingwatchingbirds181223.html">wheelingwatchingbirds181223</a>
             <br><a href="./entries/windwarp180323.html">windwarp180323</a>
+            <br><a href="./entries/woodpeckerwindowandkong080424.html">woodpeckerwindowandkong080424</a>
             <br><a href="./entries/yachts070722.html">yachts070722</a>
         </p>
     </div>
