--- a/entries/woodpeckerwindowandkong080424.html
+++ b/entries/woodpeckerwindowandkong080424.html
@@ -32,7 +32,7 @@
 
         <p>When they leave, I briefly wonder where. Strange to think they're somewhere now, probably alive, likely to return tomorrow, but until then they will live unimaginable lives, invisible, or watched through other people's windows. I guess that's one of the thrills of birdwatching, or encountering any animal that you think is worth feeling moved by - knowing that your paths are only crossing for a brief speck. The rest is all unseen.</p>
 
-        <p>In King Kong (1933), the people on the island build a vast wall to keep Kong out, but they also build a vast door, large enough to let him through. They give themselves a deliberate weak spot, a window of vulnerability. This door, of course, is eventually broken down, and through it Kong enters the wider world; trains and tall buildings, sedatives and skyscrapers and chains and biplanes peppering him with holes.</p>
+        <p>In <i>King Kong</i> (1933), the people on the island build a vast wall to keep Kong out, but they also build a vast door, large enough to let him through. They give themselves a deliberate weak spot, a window of vulnerability. This door, of course, is eventually broken down, and through it Kong enters the wider world; trains and tall buildings, sedatives and skyscrapers and chains and biplanes peppering him with holes.</p>
         
         <p>My dad pointed out this design flaw the first time I ever saw the film. I didn't think it particularly interesting back then. As a child, I was too preoccupied with Kong stamping villagers into the jungle mud, drowning them slowly under his huge feet. But as an adult, I've found that huge, ill-advised door increasingly interesting, though I haven't seen the film for decades.</p>
 
