--- a/index.html
+++ b/index.html
@@ -290,6 +290,10 @@
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/frontrange.jpg" alt="the front range of Colorado" id="frontrangepic"><p>our front range under winter's end</p></div>
 
+        <div class="imgcontainerportrait"><img src="./resources/images/spears.jpg" alt="snow covered shrubbery" id="spearspic"><p>cold spears</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/cats.jpg" alt="two cats asleep on a sofa" id="catspic"><p>dream batch</p></div>
+
     </div>
 
 </body>
