Edit captions and arcade

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -14,7 +14,7 @@
     mountains I've never visited<br>
     lone heron in a pixel gull field, scrubbed through two screens<br>
     lone dappled mutt<br>
-    beneath this silver birch and vapour trail people were burning up, covered in mud, trying to run a marathon<br>
+    people were burning up, covered in mud, trying to run a marathon<br>
     lone cat on dream felt<br>
     more mountains I haven't seen, and a moon I have<br>
     mineral stomach under blue glass<br>
@@ -90,6 +90,8 @@
     lifting the beach<br>
     raptor<br>
     our front range under winter's end<br>
+    cold spears<br>
+    dream batch
 
 
     
