Add change photo size

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/hawk.jpg" alt="hawk in a blurred tree" id="hawkpic"><p>raptor</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/frontrange.jpg" alt="the front range of Colorado" id="frontrangepic"><p>our front range under winter's end</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/frontrange.jpg" alt="the front range of Colorado" id="frontrangepic"><p>our front range under winter's end</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/spears.jpg" alt="snow covered shrubbery" id="spearspic"><p>cold spears</p></div>
 
