--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <br><a href="./entries/bubblecars200723.html">bubblecars200723</a>
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
             <br><a href="./entries/carbonraincopy030523.html">carbonraincopy030523</a>
+            <br><a href="./entries/coralgym150524.html">coralgym150524</a>
             <br><a href="./entries/differentdogs030423.html">differentdogs030423</a>
             <br><a href="./entries/drawnbyhand131223.html">drawnbyhand131223</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
