Add sleeping patterns

--- a/entries/coralgym150524.html
+++ b/entries/coralgym150524.html
@@ -26,15 +26,15 @@
 
         <p>'What more could you ask for?' says one.</p>
 
-        <p>The other laughs. Then, after a pause, says, 'A body that can deal with change.' </p>
+        <p>The other laughs. Then, after a pause, he says, 'A body that can deal with change.' </p>
 
         <p>'Is there such a thing?'</p>
 
-        <p>I leave the room to take a shower. I remind myself that water is a deep blessing, wherever and whenever you find it. I have never been healthier, but I have been feeling irritable for several days, no obvious reason.</p>
+        <p>I leave the room to take a shower. I remind myself that water is a deep blessing, whenever and wherever you find it. I have never been healthier, but I have been feeling irritable for several days, no obvious reason.</p>
 
         <p>When I return to my locker the two men are just about to leave. They are still talking. The conversation must have moved on by now. One of them says, 'Don't ask for too much, or they'll take it away.' I don't who or what he's referring to.</p>
         
-        <p>In the lobby, I wait for my girlfriend and watch tropical fish billow and drift in a tank of almost cosmic hues. I cannot tell if the coral is organic or made of fluorescent plastic. Some sections look immobile at first glance, but when you watch more closely you can see small filaments quivering in the thermal currents. The effect is faintly hallucinogenic. A crab with huge whiskers sidles from one side of the enclosure to the other. The glass is always exceptionally clean. I wonder who maintains it, and how. I wonder if the fish and the crab and whatever else lives in there get pumped out every time their home is scrubbed, or if the cleaning takes place whilst they're still there. They might not even know.</p>
+        <p>In the lobby, I wait for my girlfriend and watch tropical fish billow and drift in a tank of cosmic hues. I cannot tell if the coral is organic or made of fluorescent plastic. Some sections look immobile at first glance, but when you watch more closely you can see small filaments quivering in the thermal currents. The effect is faintly hallucinogenic. A crab with huge whiskers sidles from one side of the enclosure to the other. The glass is always exceptionally clean. I wonder who maintains it, and how. I wonder if the fish and the crab and whatever else lives in there get pumped out every time their home is scrubbed, or if the cleaning takes place whilst they're still there. They might not even know.</p>
 
         <p>There must be periods of time when a fish has died but nobody has noticed; when it floats along the surface, white-eyed, colder than it was in life, nudged by bubbles. Maybe customers have had to inform the staff on such occasions. 'Excuse me, but I think one of your fish is dead.' Or perhaps part of the staff's early morning routine is to check the tank, make sure everyone is still swimming. Gyms are a place for the living. The dead are never healthy.</p>
 
