--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
             <br><a href="./entries/opticverve/onfrozenshores290224.html">onfrozenshores290224</a>
             <br><a href="./entries/opticverve/pacificdrapes121022.html">pacificdrapes121022</a>
+            <br><a href="./entries/opticverve/sleepingpatterns050624.html">sleepingpatterns050624</a>
             <br><a href="./entries/opticverve/swallowingsnow070723.html">swallowingsnow070723</a>
             <br><a href="./entries/opticverve/unfamiliarpark020922.html">unfamiliarpark020922</a>
             <br><a href="./entries/opticverve/walkingblue080323.html">walkingblue080323</a>
@@ -292,8 +293,6 @@
         <div class="imgcontainerhigher"><img src="./resources/images/frontrange.jpg" alt="the front range of Colorado" id="frontrangepic"><p>our front range under winter's end</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/spears.jpg" alt="snow covered shrubbery" id="spearspic"><p>cold spears</p></div>
-
-        <div class="imgcontainershortlandscape"><img src="./resources/images/cats.jpg" alt="two cats asleep on a sofa" id="catspic"><p>dream batch</p></div>
 
     </div>
 
