Add shelter strange showers and a few images

--- a/entries/projects/thearcade.html
+++ b/entries/projects/thearcade.html
@@ -91,6 +91,8 @@
     raptor<br>
     our front range under winter's end<br>
     cold spears<br>
+    field trap<br>
+    young masks<br>
 
 
     
