--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
             <br><a href="./entries/ritualplay181223.html">ritualplay181223</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
+            <br><a href="./entries/shelter060624.html">shelter060624</a>
             <br><a href="./entries/silentsailing290124.html">silentsailing290124</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/snowscabs250324.html">snowscabs250324</a>
             <br><a href="./entries/soberattention290823.html">soberattention290823</a>
             <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
+            <br><a href="./entries/strangeshowers280524.html">strangeshowers280524</a>
             <br><a href="./entries/sweepserver200224.html">sweepserver200224</a>
             <br><a href="./entries/syntheticsun061123.html">syntheticsun061123</a>
             <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
@@ -293,6 +295,10 @@
         <div class="imgcontainerhigher"><img src="./resources/images/frontrange.jpg" alt="the front range of Colorado" id="frontrangepic"><p>our front range under winter's end</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/spears.jpg" alt="snow covered shrubbery" id="spearspic"><p>cold spears</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/fieldtrap.jpg" alt="the same field and tree copied from different angles" id="fieldtrappic"><p>field trap</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/masque.jpg" alt="children at a birthday party with masks" id="masquepic"><p>young masks</p></div>
 
     </div>
 
